--- a/style.css
+++ b/style.css
@@ -69,7 +69,7 @@ body {
     display: flex;
     flex-direction: column;
     gap: 32px;
-    width: 512px;
+    width: 600px;
 }
 
 .color-selector {
@@ -99,10 +99,6 @@ body {
     border-radius: 50%;
 }
 
-.sketching-board:hover {
-    cursor: crosshair;
-}
-
 .sketching-tools button.active {
     background-color: black;
     color: white;
@@ -110,28 +106,32 @@ body {
 
 .sketching-board {
     width: 100%;
-    height: 512px;
+    height: 600px;
     border: 1px solid black;
 
     display: flex;
     overflow: hidden;
 }
 
-.sketching-board.grid-lines-active  .board-pixel {
-    border: 1px solid #d3d3d3;
+.sketching-board.grid-lines-active .board-pixel {
+    outline: 1px solid #d3d3d3
+}
+
+.disabled-pointer-events {
+    pointer-events: none;
 }
 
 .board-row {
     flex: 1;
     display: flex;
     flex-direction: column;
-    pointer-events: none;
 }
 
 .board-pixel {
     background-color: white;
     flex: 1;
     pointer-events: auto;
+    touch-action: none;
 }
 
 
